# insitex-test

./: CMakeLists.txt  control.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/ipc/: CMakeLists.txt
src/ipc/include/insitex/ipc/: client.h  dataprocessstrategy.h  defaultprocesstrategy.h  loggerstrategy.h  peer.h  semutils.h  server.h  shmlayout.h
src/ipc/src/: client.cpp
src/server/: CMakeLists.txt  fileloggerstrategy.cpp  fileloggerstrategy.h  main.cpp  reversedataprocessstrategy.h
